{{$NEXT}}
    - Add new option to sub 'normalize-string':
      + 'no-trim'
         - do NOT trim and collapse spaces by default

3.4.2  2024-04-30T18:12:06-05:00
    - Add new options to sub 'normalize-string':
      + 'tabs'
         - keep or normalize tabs
      + 'newlines'
         - keep or normalize newlines
      + 'collapse-ws-to'
         - collapse all contiguous spaces, tabs, and newlines
           to one's choice
    - Add new option to sub 'strip-comment':
      + 'first':
         - requires the comment character to be the
           first non-whitespace character on the line,
           otherwise, no comment is defined

3.4.1  2024-04-23T08:20:00-05:00
    - Add new option to sub 'strip-comment':
      + 'normalize-all': 
          - normalizes the returned string
          - also normalizes the returned comment when
              the 'save-comment' option is True
    - Added test for new option

3.4.0  2024-04-09T14:57:37-05:00
    - Ensure the returned comment has all text from the comment
        character to the end of that line
    - Add new test and modify existing tests as required
    - Add alias named arg to sub strip-comment:
      + :mark(:$comment-char) <= new alias '$comment-char'
    - Tweak docs

3.3.3  2024-03-31T14:15:26-05:00
    - Upgrade Github workflows actions to @v4
    - Add missing .yml suffix to workflow files in dist.ini

3.3.2  2024-03-31T07:22:30-05:00
    - Change Github workflows to three-OS tests
    - Use KMP-Matcher from module module AlgorithmsIT in sub 'count-substrings'
    - Rearrange order of sub descriptions in the README
    - Add sub sort-list (from module Abbreviations)
      + add tests
    - Improve sub 'wrap-text' to use FontFactory
    - Use better returns at sub end (eliminate explicit 'return')
    - Use latest Font::AFM (ver 1.24.10)
    - Improve documentation
    - Add test for normalizing newlines and tabs in strings
    - Removed deprecated code (sub write-paragraph)
