@@ -1,11 +1,6 @@
-use v6;
 use Test;
 
 use Text::Utils :ALL;
-
-#say "constant ws = '$WS'";
-#say $WS;
-#exit;
 
 plan 27;
 
@@ -19,12 +14,15 @@ constant $n = '1 2 3 4 5 6 7 8 9 0';
 
 # strings with tabs
 my $sT  = " 1   \t\t 2 \t  3  ";
-#   normalized
+#   normalized with tabs kept
 my $sTn = "1 \t\t 2 \t 3";
+my $sTnn = " 1 2 3  ";
 is normalize-string($sT, :tabs<k>), $sTn, "keep tabs";
 
-# test no-default option
-is normalize-string($sT, :no-trim), $sT, "no-default";
+# test no-trim option
+is normalize-string($sT, :no-trim), $sTnn, "no-default";
+# another case:
+
 
 # strings with newlines
 my $sN  = " 1   \n\n 2 \n  3  ";
@@ -109,4 +107,3 @@ $str1 = 3;
 dies-ok { $str1 = normalize-string $str1 }, 'Fails on a non-string';
 
 done-testing;
-
