@@ -1,7 +1,15 @@
 {{$NEXT}}
+    - Removed sub 'split-line-rw'
+    - Add aliases for 'split-line':
+      + split-str
+      + splitstr
+    - Add new option to sub 'split-line'
+      + 'break-after'
+         - split following the end of the $brk string
     - Add new option to sub 'normalize-string':
       + 'no-trim'
          - do NOT trim and collapse spaces by default
+    - Add tests for new options
 
 3.4.2  2024-04-30T18:12:06-05:00
     - Add new options to sub 'normalize-string':
@@ -20,7 +28,7 @@
 
 3.4.1  2024-04-23T08:20:00-05:00
     - Add new option to sub 'strip-comment':
-      + 'normalize-all': 
+      + 'normalize-all':
           - normalizes the returned string
           - also normalizes the returned comment when
               the 'save-comment' option is True
